# treko-backend

./: .dockerignore  .env.template.prod  .gitignore  Dockerfile  Makefile  README.md  app_category_map.json  docker-compose.yml  docker-entrypoint-celery.sh  docker-entrypoint.sh  env.local  pyproject.toml  requirements.txt  test.py  test_payload.py
config/: celery.py  settings.py  urls.py
faceai_disabled/: views.py
faceai_disabled/face_utils/: handle_embeddings.py  recognise_and_match.py  recognise_faces.py  retrain_model.py
stats/: admin.py  models.py  permissions.py  s3handler.py  serializers.py  tasks.py  urls.py  views.py
stats/migrations/: 0001_initial.py  0002_initial.py  0003_trackingsession.py  0004_rename_active_app_trackingsession_active_apps_and_more.py  0005_activeappusage_chunk_id_activeappusage_seconds_and_more.py
trekobrunoCollection/: bruno.json
trekobrunoCollection/Admins/: Create Admin.bru  List Admins.bru  Update Admin Permissions.bru  Update Admin.bru
trekobrunoCollection/Authentication/: Change Password.bru  Login.bru  Signup.bru
trekobrunoCollection/Departments/: Create Department.bru  Get Department.bru  List Departments.bru  Update Department.bru
trekobrunoCollection/Employees/: Assign Manager.bru  Destroy Employee.bru  Get Employee.bru  Get Team Members.bru  List Employees.bru  Update Employee.bru
trekobrunoCollection/Organizations/: Create Organization.bru  Get Organization.bru  List Organizations.bru  Update Organization.bru
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
(+43 files in other folders)
